// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode acp --help 1`] = `
"crewcode acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --auto         let a reviewer approve safe actions and ask you about the rest        [boolean]
      --unguarded    approve every action that needs approval, without review (deny rules still
                     apply)                                                                [boolean]
      --approval     how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: crewcode.local)
                                                                [string] [default: "crewcode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode mcp --help 1`] = `
"crewcode mcp

manage MCP (Model Context Protocol) servers

Commands:
  crewcode mcp add [name]     add an MCP server
  crewcode mcp list           list MCP servers and their status                        [aliases: ls]
  crewcode mcp auth [name]    authenticate with an OAuth-enabled MCP server
  crewcode mcp logout [name]  remove OAuth credentials for an MCP server
  crewcode mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode attach --help 1`] = `
"crewcode attach <url>

attach to a running crewcode server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --auto          let a reviewer approve safe actions and ask you about the rest       [boolean]
      --unguarded     approve every action that needs approval, without review (deny rules still
                      apply)                                                               [boolean]
      --approval      how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to CREWCODE_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to CREWCODE_SERVER_USERNAME or 'crewcode')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode run --help 1`] = `
"crewcode run [message..]

run crewcode with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --auto         let a reviewer approve safe actions and ask you about the rest        [boolean]
      --unguarded    approve every action that needs approval, without review (deny rules still
                     apply)                                                                [boolean]
      --approval     how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running crewcode server (e.g., http://localhost:4096)      [string]
  -p, --password     basic auth password (defaults to CREWCODE_SERVER_PASSWORD)             [string]
  -u, --username     basic auth username (defaults to CREWCODE_SERVER_USERNAME or 'crewcode')
                                                                                            [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode debug --help 1`] = `
"crewcode debug

debugging and troubleshooting tools

Commands:
  crewcode debug config        show resolved configuration
  crewcode debug lsp           LSP debugging utilities
  crewcode debug rg            ripgrep debugging utilities
  crewcode debug file          file system debugging utilities
  crewcode debug scrap         list all known projects
  crewcode debug skill         list all available skills
  crewcode debug snapshot      snapshot debugging utilities
  crewcode debug startup       print startup timing
  crewcode debug agent <name>  show agent configuration details
  crewcode debug v2            debug v2 catalog and built-in plugins
  crewcode debug info          show debug information
  crewcode debug paths         show global paths (data, config, cache, state)
  crewcode debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode providers --help 1`] = `
"crewcode providers

manage AI providers and credentials

Commands:
  crewcode providers list               list providers and credentials                 [aliases: ls]
  crewcode providers login              log in to a provider
  crewcode providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode agent --help 1`] = `
"crewcode agent

manage agents

Commands:
  crewcode agent create  create a new agent
  crewcode agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode serve --help 1`] = `
"crewcode serve

starts a headless crewcode server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --auto         let a reviewer approve safe actions and ask you about the rest        [boolean]
      --unguarded    approve every action that needs approval, without review (deny rules still
                     apply)                                                                [boolean]
      --approval     how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: crewcode.local)
                                                                [string] [default: "crewcode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode models --help 1`] = `
"crewcode models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode stats --help 1`] = `
"crewcode stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode export --help 1`] = `
"crewcode export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode import --help 1`] = `
"crewcode import <file>

import session data from a JSON file

Positionals:
  file  path to a JSON file created by export                                    [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode session --help 1`] = `
"crewcode session

manage sessions

Commands:
  crewcode session list                list sessions
  crewcode session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode db --help 1`] = `
"crewcode db

database tools

Commands:
  crewcode db [query]     open an interactive sqlite3 shell or run a query                 [default]
  crewcode db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode mcp list --help 1`] = `
"crewcode mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode mcp add --help 1`] = `
"crewcode mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode mcp auth --help 1`] = `
"crewcode mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  crewcode mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode mcp logout --help 1`] = `
"crewcode mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode providers list --help 1`] = `
"crewcode providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode providers login --help 1`] = `
"crewcode providers login

log in to a provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode providers logout --help 1`] = `
"crewcode providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode agent create --help 1`] = `
"crewcode agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --auto                  let a reviewer approve safe actions and ask you about the rest
                                                                                           [boolean]
      --unguarded             approve every action that needs approval, without review (deny rules
                              still apply)                                                 [boolean]
      --approval              how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode agent list --help 1`] = `
"crewcode agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode session list --help 1`] = `
"crewcode session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode session delete --help 1`] = `
"crewcode session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;

exports[`crewcode CLI help-text snapshots every documented command emits stable help text: crewcode db path --help 1`] = `
"crewcode db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --auto        let a reviewer approve safe actions and ask you about the rest         [boolean]
      --unguarded   approve every action that needs approval, without review (deny rules still
                    apply)                                                                 [boolean]
      --approval    how actions that need approval are handled
                                                     [string] [choices: "manual", "auto", "observe"]"
`;
